# mr-graphics-benchs

./: CMakeLists.txt  conanfile.py
render_options/: render_options.cpp  render_options.hpp
save_include/lights/: light_render_data.hpp
save_include/renderer/: renderer.hpp
save_include/renderer/material/: material.hpp
save_include/renderer/mesh/: mesh.hpp
save_include/renderer/resources/buffer/: buffer.hpp
save_include/renderer/resources/command_unit/: command_unit.hpp
save_include/renderer/resources/descriptor/: descriptor.hpp
save_include/renderer/resources/framedata/: framedata.hpp
save_include/renderer/resources/images/: image.hpp
save_include/renderer/resources/pipelines/: compute_pipeline.hpp  graphics_pipeline.hpp  pipeline.hpp
save_include/renderer/resources/shaders/: shader.hpp
save_include/renderer/resources/texture/: texture.hpp
save_include/renderer/resources/texture/sampler/: sampler.hpp
save_include/renderer/window/: dummy_presenter.hpp  file_writer.hpp  presenter.hpp  render_context.hpp  swapchain.hpp
save_include/scene/: scene.hpp
scripts/: collect_stat.py  frustum_culling_res.txt  gen.sh  without_culling_res.txt
scripts/results/center_200000/: frustum_culling_res.txt  occlusion_culling_res.txt  without_culling_res.txt
scripts/results/outside_200000/: frustum_culling_res.txt  occlusion_culling_res.txt
scripts/results/outside_50000/: frustum_culling_res.txt  occlusion_culling_res.txt  without_culling_res.txt
scripts/stats/: frustum_culling_stats.json  without_culling_stats.json
scripts/stats/center_200000/: frustum_culling_stats.json  occlusion_culling_stats.json  without_culling_stats.json
scripts/stats/outside_200000/: frustum_culling_stats.json  occlusion_culling_stats.json
scripts/stats/outside_50000/: frustum_culling_stats.json  occlusion_culling_stats.json  without_culling_stats.json
